# nov

./: .gitignore  Cargo.toml  README.md  build.rs  install-deps.sh  load-image-dx11.bat  load-image-dx12.bat  load-image-gl.sh  load-image-metal.sh  load-image.bat  load-image.sh  run-cross-win64.sh  run-dx11.bat  run-dx12.bat  run-gl.sh  run-metal.sh  run-no-python.sh  run.bat  run.sh
.cargo/: config.tmpl
src/: main.rs
