# Copyright (c) 2021 Jeremy Carter <jeremy@jeremycarter.ca>
#
# All uses of this project in part or in whole are governed
# by the terms of the license contained in the file titled
# "LICENSE" that's distributed along with the project, which
# can be found in the top-level directory of this project.
#
# If you don't agree to follow those terms or you won't
# follow them, you are not allowed to use this project or
# anything that's made with parts of it at all. The project
# is also	depending on some third-party technologies, and
# some of those are governed by their own separate licenses,
# so furthermore, whenever legally possible, all license
# terms from all of the different technologies apply, with
# this project's license terms taking first priority.

[package]
name = "nov"
version = "0.1.0"
authors = ["Jeremy Carter <jeremy@jeremycarter.ca>"]
description = "nov - Nov Open View"
homepage = "https://gitlab.com/defcronyke/hobnob"
repository = "https://gitlab.com/defcronyke/nov"
license = "MIT"
# categories = ""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
metal = ["libnov/metal"]
gl = ["libnov/gl"]
dx11 = ["libnov/dx11"]
dx12 = ["libnov/dx12"]
vulkan = ["libnov/vulkan"]
empty = ["libnov/empty"]
unstable = []

[workspace]
members = [
    "../libnov",
]

[dependencies]
libnov = { path = "../libnov", version = "0.1" }
